OpenJMLTest/test/gitbug499/expected
test/gitbug499/Interval.java:43: error: Expected a declaration or a JML construct inside the JML annotation here
            //@ contains(i); // Intentional error - used to crash
                ^
test/gitbug499/Interval.java:64: error: illegal start of type
        //@ !contains(i); // Intentional error - used to crash
            ^
Operation not performed because of parse or type errors
2 errors
